--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Space+Mono&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
-    <title>Document</title>
+    <title>Tip calculator</title>
 </head>
 <body>
     <div class="container ">
@@ -41,7 +41,7 @@
                 <div class="row ">
                     <div class=" text-center col-6 mt-5 ">
                      <h1>Tip Amount</h1>
-                     <p>/ person</p>
+                     
                      <h1>Total</h1>
                      <p>/ person</p>
                     </div>
